correction layout bugs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,10 @@ body {
   background-color: #e5e5e5;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 .topo {
   width: 100%;
   height: 92px;
@@ -53,7 +57,7 @@ main {
   overflow-x: scroll;
 }
 
-.itens {
+/*.itens {
   width: 172px;
   background-color: #ffffff;
   display: flex;
@@ -61,23 +65,6 @@ main {
   border-radius: 9px;
   position: relative;
   box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
-}
-
-.select {
-  border: 10px solid #50d074;
-  box-sizing: content-box;
-  color: #50d074;
-}
-
-.select > ion-icon {
-  color: #50d074;
-}
-
-ion-icon {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  color: #eeeeee00;
 }
 
 .itens > img {
@@ -90,20 +77,55 @@ ion-icon {
 .itens > p {
   font-family: "Roboto", sans-serif;
   margin: 0px 0px 6px 14px;
+}*/
+
+.product {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  border-radius: 9px;
+  box-sizing: border-box;
+  padding: 16px 14px 14px 14px;
+  background-color: #ffffff;
+  font-family: "Roboto", sans-serif;
 }
 
-.produto {
+img {
+  width: 100%;
+  height: 50%;
+  border-radius: 4px;
+  margin: 0px auto;
+}
+
+.select {
+  padding: 10px;
+}
+
+/*.select > ion-icon {
+  color: #50d074;
+}
+
+ion-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: #eeeeee00;
+}*/
+
+.name {
   font-weight: bold;
   font-size: 16px;
   color: #333333;
 }
 
-.descricao {
+.description {
   font-size: 15px;
   color: #a6a6a6;
 }
 
-.preco {
+.price {
   font-size: 16px;
   color: #000000;
 }
@@ -161,4 +183,13 @@ ion-icon {
 .conteiner {
   display: flex;
   margin: 17px 0px 27px 0px;
+}
+
+.item {
+  width: 172px;
+  height: 216px;
+  box-sizing: border-box;
+  background: #50d074;
+  border-radius: 9px;
+  box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
 }
